k3s-arr/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: audiobookshelf
  ports:
    - name: http # <-- ADD THIS LINE
      port: 13378
      targetPort: 13378
